name:                haskit
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/jac3km4/haskit#readme
license:             MIT
license-file:        LICENSE
author:              jac3km4
maintainer:          jac3km4@gmail.com
copyright:           2017 jac3km4
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib, LuaJIT.ByteCode, Haskit.CodeGen, Haskit.Quoting, Haskit.Parser
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , binary
                     , syb
                     , mtl
                     , template-haskell
                     , unordered-containers
                     , dlist
                     , hslua
                     , megaparsec
                     , th-lift-instances
  default-language:    Haskell2010

executable haskit-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , haskit
  default-language:    Haskell2010

test-suite haskit-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , haskit
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/jac3km4/haskit
